refactor[]修补历史记录导出word,excel功能